NIFI-14390: Addressing PR comments - Refactoring create metadata template processor